--- a/Lege-Oharra.html
+++ b/Lege-Oharra.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu" >
+<html lang="eu">
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.3, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -72,7 +72,7 @@ UA-26459329-1
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section article content9 cid-rH8nwKGRPb" id="content9-5z">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article content9 cid-rH8nwKGRPb" id="content9-5z">
     
      
 
@@ -183,7 +183,7 @@ UA-26459329-1
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright 2019 Buruntzaldea IKT - All Rights Reserved
+                        © Copyright 2020 Buruntzaldea IKT - All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
