--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eu">
+<html lang="eu" >
 <head>
   <!-- Site made with Mobirise Website Builder v4.10.3, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -90,7 +90,7 @@ UA-26459329-1
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="cid-rrbEC2uvxE mbr-fullscreen mbr-parallax-background" id="header2-2x">
 
     
 
@@ -198,19 +198,19 @@ UA-26459329-1
             <div class="card col-12 col-md-6 p-3 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/8305-696x813.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/8306-2-696x1175.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-5">
                             MOTXILA TXIKIA<br>mochila pequeña</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Taldeko motxila ofiziala. Neurriagatik haurrentzat egokiagoa. Txankletak eta gauza hezeak gordetzeko konpartimendua dakar eta gauza txikiak gordetzeko poltsiko bat ere bai.
-<br><br><em>Mochila oficial del club. Por el tamaño, ñas adecuado para los niños y las niñas. Trae compartimento para chancletas y ropa humeda y bolsillo para objetos.</em></p>
+                        <p class="mbr-text mbr-fonts-style display-7">Taldeko motxila ofiziala. Neurriagatik haurrentzat egokiagoa. Txankletak eta gauza hezeak gordetzeko konpartimendua dakar. Bi konpartimendu ditu motxilak.
+<br><br><em>Mochila oficial del club. Por el tamaño, más adecuado para los niños y las niñas. Trae compartimento para chancletas y ropa humeda. Mochila con dos compartimentos.</em></p>
                       <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="HVGJ32QNFCWUQ">
 <table>
 <tbody><tr><td><input type="hidden" name="on0" value="Neurriak | Tallas">Neurriak | Tallas</td></tr><tr><td><select name="os0">
-	<option value="Bakarra | Unica">Bakarra | Unica €20,00 EUR</option>
+	<option value="Bakarra | Unica">Bakarra | Unica €25,00 EUR</option>
 </select> </td></tr>
 </tbody></table>
 <input type="hidden" name="currency_code" value="EUR">
@@ -996,7 +996,7 @@ UA-26459329-1
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="l2ex/aoqtud4FzuXYj7b6DseYv8eNL0TAX9yl8A4sAeOZJF63N+ud0gpsHXtjCHXn6SwRZ6pSIc3gISGo6PzKFK+ajLRVUx2twrX17pNgbdOsSSQetlO8ekk8W+2CnJU">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Gaia | Asunto"><input type="hidden" name="email" data-form-email="true" value="jOzj+aBFnbFDk5FLTFtFMrqbJkGhqzxeNon65J5kCBuWPtOvK7gZwyU+8axvzbmKUhrsJcL61RNlcpyaA5WAQiHOxbGcc+FKFuViCOmTi4wk9F70Wi/OLOK7uHYpOWJs">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
